--- a/index.html
+++ b/index.html
@@ -298,10 +298,20 @@ Gráficas</h4>
         <div class="grid two">
           <div class="video-wrap ratio-16x9">
             <!-- Substitua o src pelo link do vídeo (YouTube, Vimeo etc.) -->
-            <iframe src="" title="Vídeo 16:9 A" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe 
+  src="https://www.youtube.com/embed/Qxyn2oCehDo?start=559" 
+  title="Vídeo 16:9 A"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen>
+</iframe>
           </div>
           <div class="video-wrap ratio-16x9">
-            <iframe src="" title="Vídeo 16:9 B" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe 
+  src="https://www.youtube.com/embed/Qxyn2oCehDo?start=559" 
+  title="Vídeo 16:9 A"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen>
+</iframe>
           </div>
         </div>
       </div>
