--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Gráficas</h4>
           <div class="video-wrap ratio-16x9">
             <!-- Substitua o src pelo link do vídeo (YouTube, Vimeo etc.) -->
             <iframe 
-  src="https://www.youtube.com/embed/Qxyn2oCehDo?start=559" 
+  src="https://www.youtube.com/embed/Qxyn2oCehDo?start=0" 
   title="Vídeo 16:9 A"
   allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   allowfullscreen>
@@ -308,7 +308,7 @@ Gráficas</h4>
           </div>
           <div class="video-wrap ratio-16x9">
             <iframe 
-  src="https://www.youtube.com/embed/Qxyn2oCehDo?start=559" 
+  src="https://www.youtube.com/embed/gYKxdrpRbUg?start=0" 
   title="Vídeo 16:9 A"
   allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   allowfullscreen>
@@ -351,7 +351,7 @@ Gráficas</h4>
           <span class="pill">Livro</span>
           <h2 class="section-title" style="margin-top:10px">Parece que me casei com meu pai</h2>
           <p class="meta">Publicado em 2025 / Desenvolvimento Pessoal</p>
-          <p>Uma obra direta ao ponto, com frameworks práticos para acelerar a sua comunicação, liderar com autenticidade e transformar equipes em alta performance. Histórias reais, exercícios e casos para aplicar no dia a dia.</p>
+          <p>Neste livro, compartilho minha jornada de autoconhecimento e as descobertas que me ajudaram a quebrar padrões emocionais inconscientes. Você também pode transformar sua história.</p>
           <div class="cta-banner" id="cta-livro">
             <a class="btn" href="https://api.whatsapp.com/send?phone=5511982265798" target="_blank" rel="noopener">
               Comprar via WhatsApp
